--- a/fondend/login.html
+++ b/fondend/login.html
@@ -24,7 +24,7 @@
                 <img src="https://book365.vn/bitrix/templates/book365-2021/images/edu-2021/login.png" class="img-banner"
                     alt="" />
             </div>
-            <div class=" col-sm-12 col-lg-8">
+            <div class="col-sm-12 col-lg-8">
                 <ul class="nav nav-pills mt-2" id="pills-tab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="pills-login-tab" data-bs-toggle="pill"
@@ -35,8 +35,8 @@
                     </li>
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="pills-register-tab" data-bs-toggle="pill"
-                            data-bs-target="#pills-register" type="button" role="tab" aria-controls="pills-register"
-                            aria-selected="false">
+                            data-bs-target="#pills-register" type="button" role="tab"
+                            aria-controls="pills-register" aria-selected="false">
                             Đăng ký tài khoản
                         </button>
                     </li>
@@ -47,59 +47,35 @@
                             Quên mật khẩu
                         </button>
                     </li>
-
                 </ul>
-                <hr>
+                <hr />
 
                 <div class="tab-content" id="pills-tabContent">
-                    <div class="tab-pane fade show active img-fluid" id="pills-login" role="tabpanel"
-                        aria-labelledby="pills-login-tab" tabindex="0">
-                        <div class="mb-3 row">
-                            <label class="col-sm-2 col-form-label">Số điện thoại</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" />
+                    <form action="">
+                        <div class="tab-pane fade show active img-fluid" id="pills-login" role="tabpanel"
+                            aria-labelledby="pills-login-tab" tabindex="0">
+                            <div class="mb-3 row">
+                                <label class="col-sm-2 col-form-label">Số điện thoại</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <label class="col-sm-2 col-form-label">Mật khẩu</label>
+                                <div class="col-sm-10">
+                                    <input type="password" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <div class="col-sm-12">
+                                    <button type="button" style="width: 100%; color: #fff" class="btn btn-warning">Đăng
+                                        nhập</button>
+                                </div>
                             </div>
                         </div>
-                        <div class="mb-3 row">
-                            <label class="col-sm-2 col-form-label">Mật khẩu</label>
-                            <div class="col-sm-10">
-                                <input type="password" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="mb-3 row">
-                            <div class="col-sm-2"></div>
-                            <div class="col-sm-10">
-                                <button type="button" style="width: 100%; color: #fff" class="btn btn-warning">
-                                    Đăng nhập
-                                </button>
-                            </div>
-                        </div>
-                        <div style="margin-top: 18px; display: flex; justify-content: center">
-                            <div class="form-check" style="
-                                    padding-right: 19px;
-                                    border-right: 2.5px solid #7d7a7a;
-                                    margin-right: 11px;">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    Ghi nhớ
-                                </label>
-                            </div>
+                    </form>
 
-                            <div>Quên mật khẩu</div>
-                        </div>
-                        <div style="justify-content: center; margin-top: 17px" class="row">
-                            <a href="#" class="fb btn-fb">
-                                <i class="fa fa-facebook fa-fw"></i> Login with Facebook
-                            </a>
-                        </div>
-                        <div class="row" style="text-align: center; margin-top: 17px">
-                            <div class="no-acc">Bạn chưa có tài khoản?</div>
-                            <div>
-                                <span class="no-acc">Vui lòng</span>
-                                <span class="pl-register-acc">Đăng ký tài khoản</span>
-                            </div>
-                        </div>
-                    </div>
+                    <!--  -->
                     <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="pills-register-tab"
                         tabindex="0">
                         <div class="mb-3 row">
@@ -140,12 +116,12 @@
                         <div class="mb-3 row">
                             <div class="col-sm-4"></div>
                             <div class="col-sm-8">
-                                <button type="button" class="btn btn-info btn-register-acc">
-                                    Đăng ký tài khoản
-                                </button>
+                                <button type="button" class="btn btn-info btn-register-acc">Đăng ký tài
+                                    khoản</button>
                             </div>
                         </div>
                     </div>
+
                     <div class="tab-pane fade" id="pills-forgot-password" role="tabpanel"
                         aria-labelledby="pills-forgot-password-tab" tabindex="0">
                         <div class="mb-3 row">
@@ -173,12 +149,11 @@
                         <div class="mb-3 row">
                             <div class="col-sm-4"></div>
                             <div class="col-sm-8">
-                                <button type="button" class="btn btn-info btn-register-acc">
-                                    Gửi yêu cầu
-                                </button>
+                                <button type="button" class="btn btn-info btn-register-acc">Gửi yêu cầu</button>
                             </div>
                         </div>
                     </div>
+
                     <div class="tab-pane fade" id="pills-verify" role="tabpanel" aria-labelledby="pills-verify-tab"
                         tabindex="0">
                         <div class="mb-3 row">
@@ -188,7 +163,6 @@
                                 <input type="text" class="form-control" />
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -196,8 +170,8 @@
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+</script>
 <script src="https://kit.fontawesome.com/e8f8566497.js" crossorigin="anonymous"></script>
 
 </html>
