còn phần css cho đẹp hehe

--- a/fondend/cart/index.html
+++ b/fondend/cart/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="item_trangthai2">
                 <p class="text_trangthai">Thanh toán</p>
-                <div class="trangthai">
+                <div class="trangthai" style=" background-color: white;border: 1px solid #02bbff;" >
                     <i class="fa-regular fa-credit-card"></i>
                 </div>
             </div>
