--- a/fondend/cart/infor-user.html
+++ b/fondend/cart/infor-user.html
@@ -5,53 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css-infor-user.css">
 </head>
-<script src="js.js"></script>
 <body>
     <div class="body_infor_user">
-        <div class="container rounded bg-white mt-5 mb-5">
-            <div class="row">
-                <div class="col-md-3 border-right">
-                    <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                        <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Nguyễn Tiến Lâm</span><span class="text-black-50">ntl260303@gmail.com</span><span> </span>
+        <div class="container_infor_user">
+                <div class="img_infor">
+                    <div>
+                        <img  width="150px" id="img_user" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                        <p style="font-weight: bold;">Nguyễn Tiến Lâm</p>
+                        <span style="color: rgba(0,0,0,.5)!important;">ntl260303@gmail.com</span>
                     </div>
                 </div>
-                <div class="col-md-5 border-right">
-                    <div class="p-3 py-5">
-                        <div class="d-flex justify-content-between align-items-center mb-3">
+                <div class="infor_user">
+                    <div>
+                        <div>
                             <h4 class="text-right">Thông tin tài khoản</h4>
                         </div>
-                        <div class="row mt-2">
-                            <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control"  value="Nguyễn Tiến Lâm"></div>
+                        <div>
+                            <div><label class="labes" >Name</label><br><input type="text"   value="Nguyễn Tiến Lâm"></div>
                         </div>
-                        <div class="row mt-3">
-                            <div class="col-md-12"><label class="labels">Mobile Number</label><input type="text" class="form-control"  value="0949520467"></div>
-                            <div class="col-md-12"><label class="labels">Address </label><input type="text" class="form-control"  value="180 Tây Mỗ,Nam Từ Liêm,Hà Nội,Việt Nam"></div>
-                            <div class="col-md-12"><label class="labels">Email ID</label><input type="text" class="form-control"  value="ntl260303@gmail.com"></div>
+                        <div>
+                            <div><label class="labes" >Mobile Number</label><br><input type="text"   value="0949520467"></div>
+                            <div><label class="labes" >Address </label><br><input type="text"   value="180 Tây Mỗ,Nam Từ Liêm,Hà Nội,Việt Nam"></div>
+                            <div><label class="labes" >Email ID</label><br><input type="text"   value="ntl260303@gmail.com"></div>
                         </div>
-                        <div class="mt-5 text-center"><a href="#"><button class="btn btn-primary profile-button" type="button">Update User</button></a></div>
+                        <div style="width: 100%;height: 100px;line-height: 100px; text-align: center;" ><a href="#"><button class="profile_button" type="submit">Update User</button></a></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div>
                     
-                    <div class="p-3 py-5">
-                        <div class="d-flex justify-content-between align-items-center experience"><span>Edit Password</span></div><br>
-                        <div class="col-md-12"><label class="labels">Tên đăng nhập</label><input type="text" class="form-control" readonly  value="lamnt"></div> <br>
+                    <div class="edit_password">
+                        <div><span>Edit Password</span></div><br><br>
+                        <div><label class="labes" >Tên đăng nhập</label><br><input type="text"  readonly  value="lamnt"></div> <br>
                         <input type="checkbox"  class="thaydoi_password" name="" id=""><label for="">Thay đổi mật khẩu</label>
                         <label class="thaydoi_hien" >
-                            <div class="col-md-12"><label class="labels">Mật khẩu cũ</label><input type="text" class="form-control" id="password_old"  value=""></div>
-                            <div class="col-md-12"><label class="labels">Mật khẩu mới</label><input type="text" class="form-control" id="password_new"  value=""></div>
-                            <div class="col-md-12"><label class="labels">Nhập lại mật khẩu mới</label><input type="text" class="form-control" id="password_new"  value=""></div>
-                            <div class="mt-5 text-center"><a href="#"><button class="btn btn-primary profile-button" type="button">Save Password</button></a></div>
+                            <div><label class="labes" >Mật khẩu cũ</label><br><input type="text"  id="password_old"  value=""></div>
+                            <div><label class="labes" >Mật khẩu mới</label><br><input type="text"  id="password_new"  value=""></div>
+                            <div><label class="labes">Nhập lại mật khẩu mới</label><input type="text"  id="password_new"  value=""></div>
+                            <div style="width: 100%;height: 100px;line-height: 100px; text-align: center;" ><a href="#"><button class="profile_button" type="button">Save Password</button></a></div>
                         </label>
                     </div>
                 </div>
-            </div>
-        </div>
+        </div>  
     </div>
 </body>
 </html>
