chức năng cuộn file xác nhận

--- a/fondend/cart/thanhtoan.html
+++ b/fondend/cart/thanhtoan.html
@@ -176,9 +176,9 @@
         <a style="text-decoration: none;" href="#" ><label for="xacnhan_pay"  class="pay_in_cart"> Đặt Hàng =>></label></a>
         <input type="checkbox" class="xac_nhan" name="" id="xacnhan_pay">
         <label for="xacnhan_pay" class="thanhtoan_overlay"></label>
-        <div class="thanhtoan_xacnhan">
+        <div class="thanhtoan_xacnhan" id="scoll">
             <div class="thanhtoan_xacnhan_close">
-                <label for="xacnhan_pay"><i class="fa-solid fa-xmark"></i></label>
+                <label class="close_xacnhan_pay" for="xacnhan_pay"><i class="fa-solid fa-xmark"></i></label>
             </div>
             <p id="font800" style="color:#02bbff;">Xác nhận mua hàng</p>
             <p>Trước khi thanh toán, quý khách vui lòng xác nhận các thông tin mua hàng sau đây:</p>
@@ -197,6 +197,34 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr class="item_book_in-cart">
+                        <td>1</td>
+                        <td class="item_book_cart_specifically">
+                            <div class="cart_book_title">
+                                <p class="title_book">
+                                    Quân Đội Nga - Những Bí Mật Bạn Chưa Biết
+                                </p>
+                                <p class="tacgia_book">
+                                    Tác giả: Mai Hương, Văn Nam, Anh Ba (Sưu tầm, tuyển dịch)
+                                </p>
+                                <p class="nxb_book">
+                                    NXB: Quân đội Nhân dân
+                                </p>
+                               
+                            </div>
+                            <img src="https://book365.vn/upload/resize_cache/iblock/3c4/570_490_1/3c4bcadf08b7779ce399cfc77ad194a5.jpeg" alt="">
+                        </td>
+                        <td class="price_in_cart" >
+                            <p class="price_item_cart">131.250 đ</p>
+                            <p class="sale_price_item_cart"> <del> 175.000 đ </del>| - 25%</p>
+                        </td>
+                        <td style="text-align: center;">
+                            <p class="soluong_item">1</p>
+                        </td>
+                        <td class="price_in_cart" >
+                            <p class="price_item_cart" style="color: red ;" id="font600" >131.250 đ</p>
+                        </td>
+                    </tr>
                     <tr class="item_book_in-cart">
                         <td>1</td>
                         <td class="item_book_cart_specifically">
