--- a/frontdend/index.html
+++ b/frontdend/index.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="header__cart-item">
                             <div class="cart__icon">
-                                <a href="#"><img src="./assets/image/white_cart_new.png" alt="" /></a>
+                                <i class="fa-solid fa-cart-shopping"></i>
                             </div>
                         </div>
                     </div>
