--- a/frontdend/index.html
+++ b/frontdend/index.html
@@ -465,48 +465,9 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="row-footer">
-                        <div class="item__footer-title">NHỮNG KHU VỰC CHÍNH CỦA BOOK365</div>
-                    </div>
-                    <div class="row-footer">
-                        <div class="row row-second">
-                            <div class="item__footer">
-                                <h3>Khu vực chung</h3>
-                                <p>Tập trung các giới thiệu các chuyên mục sách hay nhất, và các sự kiện nổi bật của sàn sách.</p>
-                            </div>
-                            <div class="item__footer">
-                                <h3>Sàn sách in</h3>
-                                <p>
-                                    Có hàng nghìn đầu sách in phong phú từ gần 100 đơn vị xuất bản và phát hành tham gia với công nghệ tìm kiếm tối ưu giúp cho việc tìm kiếm sách
-                                    in của bạn đọc trở nên dễ dàng và nhanh chóng.
-                                </p>
-                            </div>
-                            <div class="item__footer">
-                                <h3>Sàn sách Ebook</h3>
-                                <p>
-                                    Tập trung nhiều sách E-book, với sự tham gia của nhiều đơn vị phát hành điện tử uy tín như Waka, Nhà xuất bản Trẻ, Nhà xuất bản Y học, Nhà xuất
-                                    bản Giáo dục Việt Nam,...
-                                </p>
-                            </div>
-                            <div class="item__footer">
-                                <h3>Sàn giao dịch bản quyền</h3>
-                                <p>
-                                    Cho phép các đơn vị xuất bản, phát hành trong và ngoài nước thử nghiệm đưa bản quyền hay do mình chủ quản lên giới thiệu, cho phép tương tác và
-                                    giao dịch bản quyền bằng các kênh tương tác trực tuyến.
-                                </p>
-                            </div>
-                            <div class="item__footer">
-                                <h3>Khu vực sự kiện</h3>
-                                <p>
-                                    Tập trung các sự kiện thời sự diễn ra tại sàn sách và các sự chia sẻ của các sách ebook miễn phí, với sự hỗ trợ của các bài viết, video, album
-                                    ảnh và công nghệ trình diễn tin bài như một cổng thông tin điện tử.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <div class="row-footer border">
-                    <div class="row" style="align-items: center">
+                    <div class="row" style="margin-top: 10px; align-items: center">
                         <div class="item__footer">
                             <img class="logo" src="https://book365.vn/bitrix/templates/book365-2021/images/edu-2021/bocongthuong.png" alt="" />
                         </div>
@@ -524,7 +485,7 @@
                             </div>
                         </div>
                         <div class="item__footer">
-                            <button onclick="topFuntion()" id="myBtnncew" title="Go to top">
+                            <button onclick="topFunction()" id="myBtn" title="Go to top">
                                 <img src="https://book365.vn/bitrix/templates/book365-2021/images/edu-2021/top.png" alt="" />
                             </button>
                         </div>
