--- a/fondend/cart/index.html
+++ b/fondend/cart/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+<style>
+    th, td {
+    border-bottom: 1px solid #ddd;
+}
+</style>
 <body>
     <div class="cart">
         
@@ -29,12 +34,6 @@
                 <p class="text_trangthai">Giao hàng</p>
                 <div class="trangthai">
                     <i class="fa-solid fa-truck"></i>
-                </div>
-            </div>
-            <div class="item_trangthai4">
-                <p class="text_trangthai">Đã nhận hàng</p>
-                <div class="trangthai">
-                    <i class="fa-regular fa-circle-check"></i>
                 </div>
             </div>
         </div>
@@ -63,7 +62,7 @@
                         <td>
                             <input type="checkbox" type="checkbox" name="checkboxArr[]" id="checkall"  class="all">
                         </td>
-                        <td><p>Công ty Cổ phần Tri thức Văn hóa Sách Việt Nam - Vinabook JSC (1 sản phẩm)</p></td>
+                        <td><p >Công ty Cổ phần Tri thức Văn hóa Sách Việt Nam - Vinabook JSC (1 sản phẩm)</p></td>
                     </tr>
                     <tr class="item_book_in-cart">
                         <td><input type="checkbox" type="checkbox" name="checkboxArr[]"id="checkall" class="allcheck"></td>
