--- a/fondend/cart/trangthaidonhang.html
+++ b/fondend/cart/trangthaidonhang.html
@@ -25,7 +25,7 @@
     <div class="cart" style="position: relative;">
         
         <div class="cart_top">
-            <progress max="100" value="80"></progress>
+            <progress max="100" value="100"></progress>
             <div class="item_trangthai">
                 <p class="text_trangthai">Giỏ hàng</p>
                 <div class="trangthai">
@@ -52,6 +52,7 @@
                     <th>STT</th>
                     <th>Mã đơn hàng</th>
                     <th>Thành tiền</th>
+                    <th>Trạng thái</th>
                     <th>Tình trạng</th>
                     <th></th>
                 </tr>
@@ -61,9 +62,11 @@
                     <label for="xacnhan_pay" class="click_tr_in_table">
                     <td>1</td>
                     <td>MX093677</td>
-                    <td id="fontbold" >131.250đ</td>
+                    <td id="fontbold" >	148.250 đ</td>
                     <td>
-                        <p>Đã thanh toán</p>
+                        <p><i class="fa-solid fa-xmark"></i> Chưa thanh toán</p>
+                    </td>
+                    <td>
                         <p>Đang vận chuyển <i class="fa-solid fa-car-side"></i></p>
                     </td>
                     <td>
@@ -131,7 +134,10 @@
                 <tr>
                     <td>2</td>
                     <td>MX03223537</td>
-                    <td id="fontbold">131.250đ</td>
+                    <td id="fontbold">	148.250 đ</td>
+                    <td>
+                        <p><i class="fa-solid fa-check"></i> Đã thanh toán</p>
+                    </td>
                     <td>
                         <p>Giao Hàng Thành Công <i class="fa-sharp fa-solid fa-circle-check"></i>   </p>
                     </td>
