--- a/fondend/cart/index.html
+++ b/fondend/cart/index.html
@@ -79,7 +79,7 @@
                                 <p class="nxb_book">
                                     NXB: Quân đội Nhân dân
                                 </p>
-                                <div class="cart_book_remote"><a href="#" onclick="return confirm('ban co chac muon xoa') " >xoa</a></div>
+                                <div class="cart_book_remote"><a href="#" onclick="return confirm('ban co chac muon xoa') " ><i class="fa-solid fa-trash-can fa-xs" style="color: #a24981;"></i></a></div>
                             </div>
                             <img src="https://book365.vn/upload/resize_cache/iblock/3c4/570_490_1/3c4bcadf08b7779ce399cfc77ad194a5.jpeg" alt="">
                         </td>
