validate trang thông tin người dùng

--- a/fondend/cart/index.html
+++ b/fondend/cart/index.html
@@ -113,5 +113,5 @@
         <a href="thanhtoan.html" ><button class="pay_in_cart"> Thanh Toán <i class="fa-regular fa-credit-card"></i></button></a>
     </div>
 </body>
-<script src="js.js"></script>
+<script src="cart.js"></script>
 </html>
