--- a/fondend/phungps24202/article.html
+++ b/fondend/phungps24202/article.html
@@ -12,11 +12,11 @@
 		<section class="main-news">
             <div class="featured">
                 <article class="featured_fluid">
-                    <img src="/fondend/phungps24202/assets/image/sach-ban-chay-nhat-cua-tac-gia-nguyen-nhat-anh-257362.jpg" alt="Featured Book">
+                    <img src="/fondend/phungps24202/assets/image/bai-hoc-thanh-bai-tu-huou-cao-co-625425.jpg" alt="Featured Book">
                     <div class="overlay">
-                        <h2>Sách nổi bật</h2>
-                        <h3>Top 10 sách bán chạy nhất của tác giả Nguyễn Ngọc Ánh</h3>
-                        <p>Nguyễn Nhật Ánh là một trong những tác giả được giới trẻ yêu thích nhất ở Việt Nam với hàng loạt những đầu sách nổi tiếng. Không những vậy, rất nhiều câu chuyện của ông đã được chuyển thể thành những bộ phim nổi tiếng và được khán giả yêu thích..</p>
+                        <h2>Tin nổi bật</h2>
+                        <h3>Bài học từ hươu cao cổ</h3>
+                        <p>Mỗi lần một chú hươu con ra đời đều là một bài học. Khi sinh con, hươu mẹ không nằm mà lại đứng, như vậy hươu con chào đời bằng một cú rơi hơn 3m xuống đất và nằm ngay dưới đó..</p>
     
                         <a href="#" class="btn">Xem thêm</a>
                     </div>
@@ -63,13 +63,13 @@
 				</form>
 			</div>
 			<div class="categories">
-				<h2>Categories</h2>
+				<h2>Tin cùng chuyên mục</h2>
 				<ul>
-					<li><a href="#">Fiction</a></li>
-					<li><a href="#">Non-fiction</a></li>
-					<li><a href="#">Mystery & Thriller</a></li>
-					<li><a href="#">Romance</a></li>
-					<li><a href="#">Science Fiction & Fantasy</a></li>
+					<li><a href="#">Bài học từ hươu cao cổ</a></li>
+					<li><a href="#">12 cuốn sách hay nhất của Brian Tracy (Phần 1)</a></li>
+					<li><a href="#">Câu chuyện cuộc sống: Người mù tắt đèn</a></li>
+					<li><a href="#">Câu chuyện cuộc sống: câu chuyện ốc sên</a></li>
+					<li><a href="#">Câu chuyện cuộc sống: theo đuổi hạnh phúc</a></li>
 				</ul>
 			</div>
 			<div class="top-sellers">
