--- a/fondend/email/order-confirmation/oder-confirm.html
+++ b/fondend/email/order-confirmation/oder-confirm.html
@@ -48,6 +48,9 @@
                     <div class="item">  
                         <p class="item-left">Địa chỉ: </p><p>30 Mai Dịch- Cầu Giấy-Hà Nội</p>
                     </div>                    
+                    <div class="item">  
+                        <p class="item-left">Thời gian giao hàng dự kiến: </p><p>2023-03-26</p>
+                    </div>                    
                 </div>
                 <table class="table table-bordered  mt-3">
                     <thead>
