--- a/fondend/cart/thanhtoan.html
+++ b/fondend/cart/thanhtoan.html
@@ -143,7 +143,7 @@
                         </div>
                         
                     </div>
-                    <input type="submit" value="Submit" class="btn">
+                    <input type="submit" value="Thay đổi" class="btn">
                 </form>
             </div>
             <!-- ẩn đi form này -->
